--- a/vite-project/.gitignore
+++ b/vite-project/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore .env file
+backend/.env
+
+# Ignore image files in public/images/
+public/images/*
+
