--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -16,6 +16,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-headroom": "^3.2.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-loading-indicators": "^1.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
