--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
